# herbready

./: .gitignore  package-lock.json  package.json
.github/workflows/: release-windows.yml
scripts/: gen-icons.mjs
src/: App.vue  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  queries.rs
src/api/: tauri.ts
src/components/: AboutDialog.vue  AppSettingsDialog.vue  ConnectionBar.vue  DailyTab.vue  DrugPanel.vue  DrugPill.vue  HerbReadyLogo.vue  HistoryTab.vue  SearchTab.vue  SettingsDialog.vue
src/components/dialogs/: AboutDialog.vue  AppSettingsDialog.vue  PatientPickerDialog.vue  SettingsDialog.vue
src/stores/: appConfig.ts  connection.ts
src/types/: index.ts
src/utils/: dateHelper.ts  drugParser.ts
