[package]
name = "HerbReady"
version = "2.0.0"
description = "HerbReady — ระบบจ่ายยาสมุนไพร"
authors = ["HerbReady"]
edition = "2021"

[lib]
name = "herb_ready_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
sqlx          = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
tokio         = { version = "1", features = ["full"] }
once_cell     = "1"
chrono        = { version = "0.4", features = ["serde"] }
anyhow        = "1"
log           = "0.4"
env_logger    = "0.11"
dirs          = "5"
rust_xlsxwriter = "0.79"
printpdf        = "0.5"
